shop role service companyadmin getid to data 20 oct

--- a/web/src/app/admin/shop/shop.component.html
+++ b/web/src/app/admin/shop/shop.component.html
@@ -191,7 +191,9 @@
                              <!-- Save/Cancel -->
                             <div class="row my-4">
                                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-0">
-                                    <button type="submit" class="me-3" mat-raised-button color="primary" [disabled]="!f.valid">Save</button>
+
+                                    <button class="me-3" type="button" mat-raised-button color="primary"  [disabled]="id == 0 || !f.valid" *ngIf=" id != 0"   (click)="updateShop()"  >Update</button>
+                                    <button type="submit" class="me-3" mat-raised-button color="primary" [disabled]="!f.valid" *ngIf="id == 0">Save</button>
                                     <button type="button" mat-raised-button [routerLink]="['/admin/shopList']">Cancel</button>
                                 </div>
                             </div>
