--- a/web/src/app/admin/role/role.component.html
+++ b/web/src/app/admin/role/role.component.html
@@ -1,1 +1,81 @@
-<p>role works!</p>
+<section class="content">
+    <div class="container-fluid">
+        <div class="block-header">
+            <div class="row"></div>
+        </div>
+        <div class="row clearfix">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <div class="card">
+                    <div class="header">
+                        <h2>Role Permission</h2>
+                        <ul class="header-dropdown m-r--5"> </ul>
+                    </div>
+                    <div class="body">
+                        <form #f="ngForm">
+                            <div class="row" *ngIf="!showAdd">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Role</mat-label>
+                                        <mat-select name="Field Type" [(ngModel)]="selectedRole.ID" required
+                                            #Typecontrol appAutoFoucsDirectives>
+                                            <mat-option [value]=""></mat-option>
+                                            <mat-option *ngFor="let role of roleList" [value]="role.ID">
+                                                {{role.Name | uppercase}}
+                                            </mat-option>
+                                        </mat-select>
+                                        <mat-error>
+                                            Select Valid Value
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
+                                <div *ngIf="!showAdd" class="col-md-6 col-sm-12 mb-0">
+                                    <button type="button" class="btn_icon" (click)="showAdd = !showAdd;">
+                                        <mat-icon class="col-white plus_icon">add</mat-icon>
+                                    </button>
+                                    <button type="button" class="btn_icon" [disabled]="selectedRole.ID === ''"
+                                        (click)="deleteRole()">
+                                        <mat-icon class="delete_icon me-2 ms-2">delete_forever</mat-icon>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="row" *ngIf="showAdd">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Role Name</mat-label>
+                                        <input matInput name="NewRole" [(ngModel)]="selectedRole.Name" required
+                                            #NewProductTypecontrol>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                    <button type="button" autofocus class="btn_icon"
+                                        (click)="showAdd = !showAdd; saveRole()">
+                                        <mat-icon class="save_icon">save</mat-icon>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="body" style="overflow-x:auto;overflow:auto;height:450px;"
+                                class="table-responsive">
+                                <table class="table" class="table table-striped table-hover table-sm table-bordered"
+                                    style="border: 2px solid #fff !important;">
+                                    <thead class="thead-light">
+                                        <tr class="text-left">
+                                            <th >Module Name</th>
+                                            <th>ModuleView</th>
+                                            <th>View</th>
+                                            <th>Edit</th>
+                                            <th>Add</th>
+                                            <th>Delete</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+
+                                    </tbody>
+                                </table>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
