--- a/web/src/app/admin/shop-list/shop-list.component.html
+++ b/web/src/app/admin/shop-list/shop-list.component.html
@@ -6,7 +6,7 @@
           <div class="card p-0">
             <div class="header p-2 py-0 pt-1">
               <h2>Shop List 
-                <mat-icon class="col-white plus_icon" [routerLink]="['/admin/shop']" style="float: right;"> add</mat-icon>
+                <mat-icon class="col-white plus_icon" [routerLink]="['/admin/shop',0]" style="float: right;"> add</mat-icon>
               </h2>
             </div>
             <div class="body mt-2 p-2">
@@ -34,7 +34,10 @@
                       </thead>
                       <tbody>
                         <tr class="text-center" *ngFor="let data of dataList let i = index;" style="white-space: nowrap;">
-                          <td style="width: 7%;"><mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon></td>
+                          <td style="width: 7%;">
+                            <mat-icon class="edit_icon ms-1"  [routerLink]="['/admin/shop',data.ID]">edit</mat-icon>
+                            <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                          </td>
                           <td class="text-left">{{ dataList.length - i }}</td>
                           <td class="text-left">{{data.Name}}</td>
                           <td class="text-left">{{data.AreaName}}</td>
@@ -46,8 +49,8 @@
                           <td class="text-left">{{(data.GSTNo !== 'null')? data.GSTNo: ''}}</td>
                           <td class="text-left">{{(data.CINNo !== 'null')? data.CINNo: ''}}</td>
                           <td class="text-left">{{data.ShopTiming}}</td>
-                          <td class="text-left">{{data.CreatedBy}}</td>
-                          <td class="text-left">{{data.UpdatedBy}}</td>
+                          <td class="text-left">{{data.CreatedPerson}}</td>
+                          <td class="text-left">{{data.UpdatedPerson}}</td>
                         </tr>
                       </tbody>
                     </table>
