--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -44,10 +44,10 @@
         <a class="dropBtn" data-target="#collapseExample">Administration <i class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
         <div class="drop-content" id="collapseExample">
-          <a href="javascript:void(0)" [routerLink]="['/admin/company',loggedInUser.CompanyID]" id="collapseExample">Company Info</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/company',user.data.CompanyID]" id="collapseExample">Company Info</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/employeeList']"                   id="collapseExample">Employee</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/shopList']"                       id="collapseExample">Shop</a>
-          <a href="#">Role-Permission</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/rolePermission']"                       id="collapseExample">Role-Permission</a>
           <a href="#">Company Setting</a>
           <a href="#">SMS Setting</a>
           <a href="#">Login History</a>
