--- a/web/src/app/product/add-manage/add-manage.component.html
+++ b/web/src/app/product/add-manage/add-manage.component.html
@@ -161,7 +161,7 @@
                             </div>
                         </form>
                     </div>
-                    <div class="body" style="overflow-x:auto;overflow:auto;height:220px;"
+                    <div class="body" style="overflow-x:auto;overflow:auto;height:180px;"
                     class="table-responsive">
                     <table class="table" class="table table-striped table-hover table-sm table-bordered"
                         style="border: 2px solid #fff !important;">
@@ -197,14 +197,126 @@
                     </table>
                 </div>
                 </div>
-
                 <!-- serviceCard -->
                 <div class="card">
                     <div class="header">
                         <h2>Service Management For Billing</h2>
                         <ul class="header-dropdown m-r--5"> </ul>
                     </div>
-                    
+                    <div class="body">
+                        <form  #f="ngForm" autocomplete="off">
+                            <div class="row">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0" *ngIf="  !showAddService">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Product Name</mat-label>
+                                        <mat-select name="Field Type" [(ngModel)]="Service.Name" (selectionChange)="setValuesService()" required #Typecontrol appAutoFoucsDirectives>
+                                          <mat-option *ngFor="let data of serviceList  let i = index;" [value]="data.Name">
+                                            {{data.Name | uppercase}}
+                                          </mat-option>
+                                        </mat-select>
+                                        <mat-error>
+                                        Select Valid Value
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0" *ngIf="showAddService">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Product Name</mat-label>
+                                        <input matInput name="NewRole" [(ngModel)]="Service.Name"  required #NewProductTypecontrol>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                    <mat-form-field class="example-full-width mb-0" >
+                                        <mat-label>Description</mat-label>
+                                        <input matInput name="Description" [(ngModel)]="Service.Description"  required #Descriptioncontrol>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                    <mat-form-field class="example-full-width mb-0" >
+                                        <mat-label>Customer Price</mat-label>
+                                        <input matInput name="Price" [(ngModel)]="Service.Price" required #Pricecontrol>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ">
+                                    <mat-form-field class="example-full-width mb-0" >
+                                        <mat-label>GST%</mat-label>
+                                        <input matInput name="GSTPercentage" [(ngModel)]="Service.GSTPercentage" (blur)="calculateSevice('GSTPercentage', 'chgst1')" required #GSTPercentagecontrol>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                    <mat-form-field class="example-full-width mb-0" >
+                                        <mat-label>GSTAmount</mat-label>
+                                        <input matInput name="GSTAmount" [(ngModel)]="Service.GSTAmount" (blur)="calculateSevice('GSTAmount', 'chgst1')" required #GSTAmountcontrol>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 p-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>GST Type</mat-label>
+                                        <mat-select name="GSTType" [(ngModel)]="Service.GSTType" (blur)="calculateSevice('Total', 'chtotal1')" required #GSTTypecontrol1>
+                                            <mat-option value="None">None</mat-option>
+                                            <mat-option [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}</mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                    <mat-form-field class="example-full-width mb-0" >
+                                        <mat-label>Total </mat-label>
+                                        <input matInput name="Total" [(ngModel)]="Service.TotalAmount" required #Totalcontrol>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0" *ngIf="!showAddService">
+                                   <button type="button" autofocus class="btn_icon" (click)="showAddService = !showAddService; serviceresetData();">
+                                     <mat-icon class="col-white plus_icon" >add</mat-icon>
+                                   </button>
+                                </div>
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-2 mb-0" *ngIf="showAddService">
+                                    <button type="button" autofocus class="btn_icon" (click)="showAddService = !showAddService; servicesave(); ">
+                                        <mat-icon class="save_icon" >save</mat-icon>
+                                    </button>
+                                </div>
+                                <!-- <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0" *ngIf="selectedRow.Name !== null">
+                                    <button type="button" autofocus class="btn_icon" [disabled]="selectedRow.Name === ''" (click)="chargedelete()">
+                                     <mat-icon class="delete_icon me-2 ms-2" >delete_forever</mat-icon>
+                                    </button>
+                                </div> -->
+                            </div>
+                        </form>
+                    </div>
+                    <div class="body" style="overflow-x:auto;overflow:auto;height:180px;"
+                    class="table-responsive">
+                    <table class="table" class="table table-striped table-hover table-sm table-bordered"
+                        style="border: 2px solid #fff !important;">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>S.No</th>
+                                <th>Name</th>
+                                <th>Description</th>
+                                <th>Price</th>
+                                <th>GSTPercentage</th>
+                                <th>GSTAmount</th>
+                                <th>GSTType</th>
+                                <th>TotalAmount</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="text-center" *ngFor="let c of serviceList ; let i = index;">
+                                <td>{{ i + 1 }}</td>
+                                <td>{{c.Name | uppercase}}</td>
+                                <td>{{c.Description}}</td>
+                                <td>{{c.Price}}</td>
+                                <td>{{c.GSTPercentage}}</td>
+                                <td>{{c.GSTAmount}}</td>
+                                <td>{{c.GSTType}}</td>
+                                <td>{{c.TotalAmount}}</td>
+                                <td>
+                                    <mat-icon class="delete_icon" (click)="servicedelete(i)">delete_forever
+                                    </mat-icon>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 </div>
             </div>
         </div>
