--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -48,7 +48,7 @@
           <a href="javascript:void(0)" [routerLink]="['/admin/employeeList']"                   id="collapseExample">Employee</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/shopList']"                       id="collapseExample">Shop</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/rolePermission']"                       id="collapseExample">Role-Permission</a>
-          <a href="#">Company Setting</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/companySetting']"                       id="collapseExample">Company Setting</a>
           <a href="#">SMS Setting</a>
           <a href="#">Login History</a>
           <a href="#">Recycle-Bin</a>
