--- a/web/src/app/admin/company-setting/company-setting.component.html
+++ b/web/src/app/admin/company-setting/company-setting.component.html
@@ -18,11 +18,11 @@
                                     <li class="nav-item" role="presentation">
                                         <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="tab"
                                             href="#ex1-tabs-1" role="tab" aria-controls="ex1-tabs-1"
-                                            aria-selected="true">Tab 1</a>
+                                            aria-selected="true">Company Setting</a>
                                     </li>
                                     <li class="nav-item" role="presentation">
                                         <a class="nav-link" id="ex1-tab-2" data-mdb-toggle="tab" href="#ex1-tabs-2"
-                                            role="tab" aria-controls="ex1-tabs-2" aria-selected="false">Tab 2</a>
+                                            role="tab" aria-controls="ex1-tabs-2" aria-selected="false">Bill</a>
                                     </li>
                                     <li class="nav-item" role="presentation">
                                         <a class="nav-link" id="ex1-tab-3" data-mdb-toggle="tab" href="#ex1-tabs-3"
@@ -358,8 +358,6 @@
                                                                         <mat-option value="retail">Retail</mat-option>
                                                                         <mat-option value="CustomerCredit">CustomerCredit</mat-option>
                                                                         <mat-option value="CustomerPower">CustomerPower</mat-option>
-    
-    
                                                                     </mat-select>
                                                                 </mat-form-field>
                                                             </td>
