--- a/web/src/app/admin/employee/employee.component.html
+++ b/web/src/app/admin/employee/employee.component.html
@@ -15,7 +15,7 @@
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Name</mat-label>
-                                                <input matInput name="Name" [(ngModel)]="data1.Name" minlength="3"
+                                                <input matInput name="Name" [(ngModel)]="data.Name" minlength="3"
                                                     required #UserNamecontrol autocomplete="off" autocomplete="nope"
                                                     appAutoFoucsDirectives>
                                                 <mat-error *ngIf="UserNamecontrol.required"> User Name is required
@@ -25,41 +25,41 @@
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>DOB</mat-label>
-                                                <input matInput name="DOB" type="date" [(ngModel)]="data1.DOB">
+                                                <input matInput name="DOB" type="date" [(ngModel)]="data.DOB">
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Anniversary</mat-label>
                                                 <input matInput name="Anniversary" type="date"
-                                                    [(ngModel)]="data1.Anniversary">
+                                                    [(ngModel)]="data.Anniversary">
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Mobile No1</mat-label>
                                                 <input matInput type="number" name="MobileNo1"
-                                                    [(ngModel)]="data1.MobileNo1" required #MobileNo1control>
+                                                    [(ngModel)]="data.MobileNo1" required #MobileNo1control>
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Mobile No2</mat-label>
                                                 <input matInput type="number" name="MobileNo2"
-                                                    [(ngModel)]="data1.MobileNo2" #MobileNo2control>
+                                                    [(ngModel)]="data.MobileNo2" #MobileNo2control>
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>PhoneNo</mat-label>
-                                                <input matInput name="PhoneNo" type="number" [(ngModel)]="data1.PhoneNo"
+                                                <input matInput name="PhoneNo" type="number" [(ngModel)]="data.PhoneNo"
                                                     #PhoneNocontrol>
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Address</mat-label>
-                                                <input matInput name="Address" [(ngModel)]="data1.Address" required
+                                                <input matInput name="Address" [(ngModel)]="data.Address" required
                                                     #Addresscontrol minlength="2">
                                                 <mat-error>
                                                     Atleast 2 characters is required
@@ -69,7 +69,7 @@
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Email</mat-label>
-                                                <input matInput name="Email" type="email" [(ngModel)]="data1.Email"
+                                                <input matInput name="Email" type="email" [(ngModel)]="data.Email"
                                                     #Emailcontrol>
                                                 <mat-error>
                                                     InValid Emailid.
@@ -79,11 +79,11 @@
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Commission Type</mat-label>
-                                                <mat-select name="CommissionType" [(ngModel)]="data1.CommissionType"
+                                                <mat-select name="CommissionType" [(ngModel)]="data.CommissionType"
                                                     required #CommissionTypecontrol>
-                                                    <mat-option value="0">No Commission</mat-option>
-                                                    <mat-option value="1">Per Sale Commission</mat-option>
-                                                    <mat-option value="2">Per Item Commission</mat-option>
+                                                    <mat-option [value]=0>No Commission</mat-option>
+                                                    <mat-option [value]=1>Per Sale Commission</mat-option>
+                                                    <mat-option [value]=2>Per Item Commission</mat-option>
                                                 </mat-select>
                                                 <mat-error>
                                                     Select Commission Type
@@ -93,11 +93,11 @@
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Commission Mode</mat-label>
-                                                <mat-select name="CommissionMode" [(ngModel)]="data1.CommissionMode"
+                                                <mat-select name="CommissionMode" [(ngModel)]="data.CommissionMode"
                                                     required #CommissionTypecontrol>
-                                                    <mat-option value="0"></mat-option>
-                                                    <mat-option value="1">Percentage</mat-option>
-                                                    <mat-option value="2">Fixed Amount</mat-option>
+                                                    <mat-option [value]=0></mat-option>
+                                                    <mat-option [value]=1>Percentage</mat-option>
+                                                    <mat-option [value]=2>Fixed Amount</mat-option>
                                                 </mat-select>
                                                 <mat-error> Select Commission Type</mat-error>
                                             </mat-form-field>
@@ -105,10 +105,10 @@
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Commission Mode</mat-label>
-                                                <mat-select name="CommissionMode" [(ngModel)]="data1.CommissionMode"
+                                                <mat-select name="CommissionMode" [(ngModel)]="data.CommissionMode"
                                                     required #CommissionTypecontrol>
-                                                    <mat-option value="0"></mat-option>
-                                                    <mat-option value="1">Percentage</mat-option>
+                                                    <mat-option [value]=0></mat-option>
+                                                    <mat-option [value]=1>Percentage</mat-option>
                                                 </mat-select>
                                                 <mat-error>Select Commission Type</mat-error>
                                             </mat-form-field>
@@ -117,14 +117,14 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Commission Value (Brand Wise)</mat-label>
                                                 <input matInput type="number" name="CommissionValue"
-                                                    [(ngModel)]="data1.CommissionValue" #CommissionValuecontrol>
+                                                    [(ngModel)]="data.CommissionValue" #CommissionValuecontrol>
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Commission Value(Non Brand Wise)</mat-label>
                                                 <input matInput type="number" name="CommissionValueNB"
-                                                    [(ngModel)]="data1.CommissionValueNB" #CommissionValueNBcontrol>
+                                                    [(ngModel)]="data.CommissionValueNB" #CommissionValueNBcontrol>
                                             </mat-form-field>
                                         </div>
                                     </div>
@@ -132,7 +132,7 @@
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>LoginName</mat-label>
-                                                <input matInput name="LoginName" [(ngModel)]="data1.LoginName" required
+                                                <input matInput name="LoginName" [(ngModel)]="data.LoginName" required
                                                     #LoginNamecontrol minlength="3" autocomplete="off"
                                                     autocomplete="nope">
                                                 <mat-error>Fill Login Name minimum length 3 </mat-error>
@@ -141,7 +141,7 @@
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Password</mat-label>
-                                                <input matInput name="Password" [(ngModel)]="data1.Password" required
+                                                <input matInput name="Password" [(ngModel)]="data.Password" required
                                                     #Passwordcontrol minlength="3" autocomplete="off" type="password"
                                                     autocomplete="new-password">
                                                 <mat-error> Fill Password atleast 3 digit.</mat-error>
@@ -150,25 +150,22 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-0 mt-2 mb-3">
-                                            <button class="me-3" mat-raised-button color="primary"
-                                                [disabled]="! f.valid">Save</button>
-                                            <button type="button" mat-raised-button
-                                                [routerLink]="['/admin/employeeList']">Cancel</button>
+                                                <button class="me-3" type="button" mat-raised-button color="primary"  [disabled]="id == 0 || !f.valid" *ngIf=" id != 0" (click)="updateUser()" >Update</button>
+                                                <button type="submit" class="me-3" mat-raised-button color="primary" [disabled]="!f.valid" *ngIf="id == 0">Save</button>
+                                                <button type="button" mat-raised-button [routerLink]="['/admin/employeeList']">Cancel</button>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-2 col-12 ps-md-5">
                                     <div class="row">
-                                        <div class="col-12 mt-1 ">
+                                        <div class="col-12 mt-1 " >
                                             <img class="fit-picture" width="170" height="170" [src]="userImage">
                                         </div>
-                                        <div class="col-xl-11 col-lg-11 col-md-11 col-11 mb-0 mt-3">
-                                            <mat-form-field appearance="legacy">
-                                                <mat-label>User Image</mat-label>
-                                                <input matInput placeholder="Placeholder" name='PhotoURL'
-                                                    [(ngModel)]="data1.PhotoURL">
-                                                <mat-icon matSuffix class="upload_icon">cloud_upload</mat-icon>
-                                            </mat-form-field>
+                                        <div class="col-xl-10 col-lg-10 col-md-10 col-11 mb-0 " (click)="fileInput.click()" style="cursor: pointer;">
+                                            <i class="fa-solid fa-cloud-arrow-up upload_icon" >
+                                                <span style="font-size: 10px;letter-spacing: 2px;">  User Image </span>
+                                            </i>
+                                            <input  #fileInput id="my-input" name='PhotoURL' type="file" [(ngModel)]="data.PhotoURL" (change)="uploadImage($event, 'company')" style="display:none;">
                                         </div>
                                     </div>
                                 </div>
@@ -185,8 +182,8 @@
                                                 [class.has-error]="ShopControl.invalid && ShopControl.touched"
                                                 [class.has-success]="ShopControl.valid">
                                                 <mat-label>Select Shop</mat-label>
-                                                <mat-select name="ShopID" [(ngModel)]="userShop.ShopID" required
-                                                    #ShopControl="ngModel">
+                                                <mat-select name="ShopID" [(ngModel)]="userShop.ShopID" required #ShopControl="ngModel">
+                                                    <mat-option [value]="s.ID" *ngFor="let s of dropShoplist"> {{s.Name}}<span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'"> ({{s.AreaName}})</span> </mat-option>
                                                 </mat-select>
                                                 <mat-error> Shop is required</mat-error>
                                             </mat-form-field>
@@ -196,8 +193,8 @@
                                                 [class.has-error]="RoleControl.invalid && RoleControl.touched"
                                                 [class.has-success]="RoleControl.valid">
                                                 <mat-label>Select Role</mat-label>
-                                                <mat-select name="RoleID" [(ngModel)]="userShop.RoleID" required
-                                                    #RoleControl="ngModel">
+                                                <mat-select name="RoleID" [(ngModel)]="userShop.RoleID" required #RoleControl="ngModel">
+                                                    <mat-option [value]="r.ID" *ngFor="let r of roleList"> {{r.Name}} </mat-option>
                                                 </mat-select>
                                                 <mat-error *ngIf="RoleControl.invalid && RoleControl.touched"> Role is
                                                     required</mat-error>
