--- a/web/src/app/admin/empolyee-list/empolyee-list.component.html
+++ b/web/src/app/admin/empolyee-list/empolyee-list.component.html
@@ -1,1 +1,69 @@
-<p>empolyee-list works!</p>
+<section class="content">
+  <div class="container-fluid">
+    <div class="block-header">
+      <div class="row clearfix">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
+          <div class="card p-0">
+            <div class="header p-2 py-0 pt-1">
+              <h2>Employee List
+                <mat-icon class="col-white plus_icon" [routerLink]="['/admin/employee',0]" style="float: right;"> add
+                </mat-icon>
+              </h2>
+            </div>
+            <div class="body mt-2 p-2">
+              <div class="row">
+                <div class="col-sm-12" style="overflow: auto; height: 530px;">
+                  <div class="table-responsive">
+                    <table class="table table-striped table-hover table-sm table-bordered"
+                      style="border: 2px solid #fff !important;">
+                      <thead>
+                        <tr>
+                          <th class="text-left">Action</th>
+                          <th class="text-left">S.No</th>
+                          <th class="text-left">EmployeeName</th>
+                          <th class="text-left">MobileNo1</th>
+                          <th class="text-left">MobileNo2</th>
+                          <th class="text-left">PhoneNo</th>
+                          <th class="text-left">Email</th>
+                          <th class="text-left">DOB</th>
+                          <th class="text-left">Anniversary</th>
+                          <th class="text-left">LoginName</th>
+                          <th class="text-left">UserGroup</th>
+                          <th class="text-left">Address</th>
+                          <th class="text-left">CreatedBy</th>
+                          <th class="text-left">UpdatedBy</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr class="text-center" *ngFor="let data of dataList let i = index;"
+                          style="white-space: nowrap;">
+                          <td style="width: 7%;">
+                            <mat-icon class="edit_icon ms-1" [routerLink]="['/admin/employee',data.ID]">edit</mat-icon>
+                            <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
+                          </td>
+                          <td class="text-left">{{dataList.length - i}}</td>
+                          <td class="text-left">{{data.Name}}</td>
+                          <td class="text-left">{{data.MobileNo1 }}</td>
+                          <td class="text-left">{{(data.MobileNo2 !== 'null')? data.MobileNo2: ''}}</td>
+                          <td class="text-left">{{(data.PhoneNo !== 'null')? data.PhoneNo: ''}}</td>
+                          <td class="text-left">{{(data.Email !== 'null')? data.Email: ''}}</td>
+                          <td class="text-left">{{data.DOB}}</td>
+                          <td class="text-left">{{data.Anniversary}}</td>
+                          <td class="text-left">{{data.LoginName}}</td>
+                          <td class="text-left">{{data.UserGroup}}</td>
+                          <td class="text-left">{{data.Address}}</td>
+                          <td class="text-left">{{data.CreatedPerson}}</td>
+                          <td class="text-left">{{data.UpdatedPerson}}</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
