--- a/web/src/app/admin/role/role.component.html
+++ b/web/src/app/admin/role/role.component.html
@@ -13,7 +13,7 @@
                     <div class="body">
                         <form #f="ngForm">
                             <div class="row" *ngIf="!showAdd">
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Role</mat-label>
                                         <mat-select name="Field Type" [(ngModel)]="selectedRole.ID" required
@@ -28,7 +28,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div *ngIf="!showAdd" class="col-md-6 col-sm-12 mb-0">
+                                <div *ngIf="!showAdd" class="col-md-6 col-sm-6 mb-0">
                                     <button type="button" class="btn_icon" (click)="showAdd = !showAdd;">
                                         <mat-icon class="col-white plus_icon">add</mat-icon>
                                     </button>
@@ -39,14 +39,14 @@
                                 </div>
                             </div>
                             <div class="row" *ngIf="showAdd">
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Role Name</mat-label>
                                         <input matInput name="NewRole" [(ngModel)]="selectedRole.Name" required
                                             #NewProductTypecontrol>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 mb-0">
                                     <button type="button" autofocus class="btn_icon"
                                         (click)="showAdd = !showAdd; saveRole()">
                                         <mat-icon class="save_icon">save</mat-icon>
@@ -59,7 +59,7 @@
                                     style="border: 2px solid #fff !important;">
                                     <thead class="thead-light">
                                         <tr class="text-left">
-                                            <th >Module Name</th>
+                                            <th>Module Name</th>
                                             <th>ModuleView</th>
                                             <th>View</th>
                                             <th>Edit</th>
@@ -67,8 +67,35 @@
                                             <th>Delete</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
-
+                                    <tbody class="text-center">
+                                        <tr *ngFor="let module of moduleList ; let i = index;">
+                                            <td>{{ module.ModuleName }}</td>
+                                            <td>
+                                                <mat-slide-toggle name="{{'MView' + i}}" color="primary"
+                                                    [(ngModel)]="module.MView" [ngModelOptions]="{standalone: true}"
+                                                    class="example-margin"></mat-slide-toggle>
+                                            </td>
+                                            <td>
+                                                <mat-slide-toggle name="{{'View' + i}}" color="primary"
+                                                    [(ngModel)]="module.View" class="example-margin"
+                                                    [ngModelOptions]="{standalone: true}"></mat-slide-toggle>
+                                            </td>
+                                            <td>
+                                                <mat-slide-toggle name="{{'Edit' + i}}" color="primary"
+                                                    [(ngModel)]="module.Edit" class="example-margin"
+                                                    [ngModelOptions]="{standalone: true}"></mat-slide-toggle>
+                                            </td>
+                                            <td>
+                                                <mat-slide-toggle name="{{'Add' + i}}" color="primary"
+                                                    [(ngModel)]="module.Add" class="example-margin"
+                                                    [ngModelOptions]="{standalone: true}"></mat-slide-toggle>
+                                            </td>
+                                            <td>
+                                                <mat-slide-toggle name="{{'Delete' + i}}" color="primary"
+                                                    [(ngModel)]="module.Delete" class="example-margin"
+                                                    [ngModelOptions]="{standalone: true}"></mat-slide-toggle>
+                                            </td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
