--- a/web/src/app/admin/company.component.html
+++ b/web/src/app/admin/company.component.html
@@ -50,7 +50,7 @@
                                                 <mat-label>Email</mat-label>
                                                 <input matInput name="Email1" [(ngModel)]="data.Email"
                                                     pattern="[a-zA-Z0-9.-_]{4,}@[a-zA-Z.-]{3,}[.]{1}[a-zA-Z]{3,}"
-                                                    required #Emailcontrol>
+                                                    required #Emailcontrol [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
                                                 <mat-error>
                                                     Invalid Email Id
                                                 </mat-error>
@@ -71,7 +71,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Country</mat-label>
                                                 <input matInput name="Country" [(ngModel)]="data.Country" required
-                                                    #Countrycontrol>
+                                                    #Countrycontrol [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
                                                 <mat-error>
                                                     Country is required
                                                 </mat-error>
@@ -81,7 +81,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>State</mat-label>
                                                 <input matInput name="State" [(ngModel)]="data.State" required
-                                                    #Statecontrol>
+                                                    #Statecontrol [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
                                                 <mat-error>
                                                     State is required
                                                 </mat-error>
@@ -91,7 +91,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>City</mat-label>
                                                 <input matInput name="City" [(ngModel)]="data.City" required
-                                                    #Citycontrol>
+                                                    #Citycontrol [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
                                                 <mat-error>
                                                     City is required
                                                 </mat-error>
@@ -120,19 +120,27 @@
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
+                                        <div *ngIf="user?.data?.UserGroup == 'SuperAdmin'" class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                            <mat-form-field class="example-full-width mb-0">
+                                                <mat-label>Remark</mat-label>
+                                                <input matInput name="Remark" [(ngModel)]="data.Remark" #Remarkscontrol [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
+                                            </mat-form-field>
+                                        </div>
+
                                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Remark</mat-label>
-                                                <input matInput name="Remark" [(ngModel)]="data.Remark" #Remarkscontrol>
+                                                <input matInput name="Remark" [(ngModel)]="data.Remark" #Remarkscontrol [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
                                             </mat-form-field>
                                         </div>
+
                                     </div>
                                     <div class="row">
                                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Plan</mat-label>
-                                                <mat-select name="Plan" [(ngModel)]="data.Plan" required #Plancontrol (selectionChange)="onPlanChange(data.Plan)">
-                                                    <mat-option *ngFor="let plan of plans" [value]="plan.ID">
+                                                <mat-select name="Plan" [(ngModel)]="data.Plan" required #Plancontrol (selectionChange)="onPlanChange(data.Plan)" [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
+                                                    <mat-option *ngFor="let plan of plans" [value]="plan.ID" >
                                                         {{plan.Name}}
                                                     </mat-option>
                                                 </mat-select>
@@ -145,7 +153,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Version</mat-label>
                                                 <mat-select name="Version" [(ngModel)]="data.Version" required
-                                                    #Versioncontrol [disabled]="disableSuperAdminFields">
+                                                    #Versioncontrol [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
                                                     <mat-option value="Basic">Basic</mat-option>
                                                     <mat-option value="Upper">Upper</mat-option>
                                                     <mat-option value="Top">Top</mat-option>
@@ -160,7 +168,7 @@
                                                 <mat-label>Shops</mat-label>
                                                 <input matInput name="NoOfShops" type="number"
                                                     [(ngModel)]="data.NoOfShops" required #NoOfShopscontrol
-                                                    [disabled]="disableSuperAdminFields">
+                                                    [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
                                                 <mat-error>
                                                     Shop count is required
                                                 </mat-error>
@@ -169,7 +177,7 @@
                                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                             <mat-form-field class="example-full-width mb-0" >
                                                 <mat-label>Effective Date</mat-label>
-                                                <input matInput  name="EffectiveDate" [(ngModel)]="data.EffectiveDate" [disabled]="disableSuperAdminFields" required #EffectiveDatecontrol [matDatepicker]="picker1">
+                                                <input matInput  name="EffectiveDate" [(ngModel)]="data.EffectiveDate"  required #EffectiveDatecontrol [matDatepicker]="picker1" [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
                                                 <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                                                 <mat-datepicker #picker1></mat-datepicker>
                                                 <mat-error >
@@ -180,7 +188,7 @@
                                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                             <mat-form-field class="example-full-width mb-0" >
                                                 <mat-label>Cancellation Date</mat-label>
-                                                <input matInput name="CacellationDate" [(ngModel)]="data.CancellationDate" [disabled]="disableSuperAdminFields" required #CacellationDatecontrol [matDatepicker]="picker2">
+                                                <input matInput name="CacellationDate" [(ngModel)]="data.CancellationDate"  required #CacellationDatecontrol [matDatepicker]="picker2" [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
                                                 <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                                                 <mat-datepicker #picker2></mat-datepicker>
                                                 <mat-error >
@@ -192,24 +200,30 @@
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                             <mat-slide-toggle type="button" name="EmailMsg" color="primary"
-                                                [(ngModel)]="data.EmailMsg" class="example-margin" #EmailMsgcontrol>
-                                                EmailMsg
+                                                [(ngModel)]="data.EmailMsg" class="example-margin" #EmailMsgcontrol [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
+                                                SMS
+                                            </mat-slide-toggle>
+                                        </div>
+                                        <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
+                                            <mat-slide-toggle type="button" name="EmailMsg" color="primary"
+                                                [(ngModel)]="data.EmailMsg" class="example-margin" #EmailMsgcontrol [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
+                                                Email
                                             </mat-slide-toggle>
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-6" style="padding:0; ">
                                             <mat-slide-toggle type="button" name="WhatsappMsg" color="primary"
                                                 #WhatsappMsgcontrol [(ngModel)]="data.WhatsappMsg"
-                                                class="example-margin">WhatsappMsg</mat-slide-toggle>
+                                                class="example-margin" [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">Whatsapp</mat-slide-toggle>
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-6 ps-3 ps-md-0" style="padding:0; ">
                                             <mat-slide-toggle type="button" name="WholeSale" color="primary"
-                                                #WholeSalecontrol [(ngModel)]="data.WholeSale" class="example-margin">
+                                                #WholeSalecontrol [(ngModel)]="data.WholeSale" class="example-margin" [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">
                                                 WholeSale</mat-slide-toggle>
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-6" style="padding:0; ">
                                             <mat-slide-toggle type="button" name="RetailPrice" color="primary"
                                                 #RetailPricecontrol [(ngModel)]="data.RetailPrice"
-                                                class="example-margin">RetailPrice</mat-slide-toggle>
+                                                class="example-margin" [disabled]="user?.data?.UserGroup !== 'SuperAdmin'">Retail</mat-slide-toggle>
                                         </div>
                                     </div>
                                 </div>
