--- a/web/src/app/admin/shop-list/shop-list.component.css
+++ b/web/src/app/admin/shop-list/shop-list.component.css
@@ -2,3 +2,14 @@
     background-image: url(../../../assets/images/SHOP.svg);
     background-size: 100%;
 }
+
+.mat-slide-toggle {
+    display: inline-block;
+    height: 24px;
+    min-width: 100% !important;
+ 
+    line-height: 24px;
+    white-space: nowrap;
+    outline: none;
+    -webkit-tap-highlight-color: transparent;
+}
