--- a/web/src/app/admin/empolyee-list/empolyee-list.component.html
+++ b/web/src/app/admin/empolyee-list/empolyee-list.component.html
@@ -5,10 +5,38 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
           <div class="card p-0">
             <div class="header p-2 py-0 pt-1">
-              <h2>Employee List
-                <mat-icon class="col-white plus_icon" [routerLink]="['/admin/employee',0]" style="float: right;"> add
-                </mat-icon>
-              </h2>
+              <div class="row">
+                <div class="col-md-1 col-12 p-0 ms-3">
+                  <h2>Employee List
+                    
+                  </h2>
+                    
+                </div>
+                <div class="col-2">
+                    <select class=" form-control"
+                        style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
+                        [(ngModel)]="itemsPerPage" (change)="getList();">
+                        <option [ngValue]="10">Show 10 Row</option>
+                        <option [ngValue]="25">Show 25 Row</option>
+                        <option [ngValue]="50">Show 50 Row</option>
+                        <option [ngValue]="100">Show 100 Row</option>
+                        <option [ngValue]="250">Show 250Row</option>
+                        <option [ngValue]="500">Show 500 Row</option>
+                    </select>
+                </div>
+                <div class="col-3 mx-auto" style="margin-top:0px;">
+                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
+                        ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
+                        [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
+                        [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                    </ngb-pagination>
+                </div>
+                <div class="col-2 ms-auto">
+                    <mat-icon class="col-white plus_icon" [routerLink]="['/admin/company',0]"
+                        style="float: right;"> add</mat-icon>
+                </div>
+            </div>
+             
             </div>
             <div class="body mt-2 p-2">
               <div class="row">
