--- a/web/src/app/admin/shop-list/shop-list.component.html
+++ b/web/src/app/admin/shop-list/shop-list.component.html
@@ -5,9 +5,36 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
           <div class="card p-0">
             <div class="header p-2 py-0 pt-1">
-              <h2>Shop List 
-                <mat-icon class="col-white plus_icon" [routerLink]="['/admin/shop',0]" style="float: right;"> add</mat-icon>
-              </h2>
+              <div class="row">
+                <div class="col-md-1 col-12 p-0 ms-3">
+                    <h2>Shop List </h2>
+                    
+                </div>
+                <div class="col-2">
+                    <select class=" form-control"
+                        style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
+                        [(ngModel)]="itemsPerPage" (change)="getList();">
+                        <option [ngValue]="10">Show 10 Row</option>
+                        <option [ngValue]="25">Show 25 Row</option>
+                        <option [ngValue]="50">Show 50 Row</option>
+                        <option [ngValue]="100">Show 100 Row</option>
+                        <option [ngValue]="250">Show 250Row</option>
+                        <option [ngValue]="500">Show 500 Row</option>
+                    </select>
+                </div>
+                <div class="col-3 mx-auto" style="margin-top:0px;">
+                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
+                        ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
+                        [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
+                        [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                    </ngb-pagination>
+                </div>
+                <div class="col-2 ms-auto">
+                  <mat-icon class="col-white plus_icon" data-mdb-toggle="modal" 
+                  data-mdb-target="#exampleModal" (click)="openModal(content)" style="float: right;"> add</mat-icon>
+                </div>
+            </div>
+           
             </div>
             <div class="body mt-2 p-2">
               <div class="row">
@@ -35,7 +62,8 @@
                       <tbody>
                         <tr class="text-center" *ngFor="let data of dataList let i = index;" style="white-space: nowrap;">
                           <td style="width: 7%;">
-                            <mat-icon class="edit_icon ms-1"  [routerLink]="['/admin/shop',data.ID]">edit</mat-icon>
+                            <mat-icon class="edit_icon ms-1" data-mdb-toggle="modal" 
+                            data-mdb-target="#exampleModal" (click)="openModalEdit(content,data)">edit</mat-icon>
                             <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                           </td>
                           <td class="text-left">{{ dataList.length - i }}</td>
@@ -64,3 +92,203 @@
     </div>
   </div>
 </section>
+
+ <!-- model popup start -->
+ <ng-template #content role="document" let-modal>
+  <div class="modal-header" style="height: 50px;">
+    <h2 class="modal-title header pt-2" id="exampleModalLabel">Shop Info</h2>
+    <button type="button" title="Close Botton" class="btn-close" aria-hidden="true"
+      (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    <form autocomplete="off" #f="ngForm" (ngSubmit)="onsubmit()">
+      <!-- shop form filed -->
+      <div class="row">
+          <div class="col-md-10 col-11">
+              <div class="row">
+                  <div class="col-md-3 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Shop Name</mat-label>
+                          <input matInput name="Name" [(ngModel)]="data.Name" required
+                              #Namecontrol minlength="2" appAutoFoucsDirectives>
+                          <mat-error *ngIf="Namecontrol.required">
+                              Shop Name is required
+                          </mat-error>
+                      </mat-form-field>
+                  </div>
+                  <div class="col-md-3 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Area Name</mat-label>
+                          <input matInput name="AreaName" [(ngModel)]="data.AreaName"
+                              #AreaNamecontrol>
+                          <mat-error>
+                              Area Name is required
+                          </mat-error>
+                      </mat-form-field>
+                  </div>
+                  <div class="col-md-3 mb-0 pt-md-3  ">
+                      <mat-slide-toggle name="Checked" class="example-margin "
+                          [checked]="toggleChecked" color="primary" (change)="copyData($event.checked)" [disabled]="false" #CompanyIDcontrol>
+                          Copy Data From Company
+                      </mat-slide-toggle>
+                  </div>
+                  <div class="col-md-3 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Mobile No1</mat-label>
+                          <input matInput name="MobileNo1" type="number"
+                              [(ngModel)]="data.MobileNo1" required #MobileNo1control>
+                          <mat-error>
+                              MobileNo1 is required
+                          </mat-error>
+                      </mat-form-field>
+                  </div>
+                  <div class="col-md-3 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Mobile No2</mat-label>
+                          <input matInput name="MobileNo2" type="number"
+                              [(ngModel)]="data.MobileNo2" #MobileNo2control>
+                          <mat-error>
+                              MobileNo2 is required
+                          </mat-error>
+                      </mat-form-field>
+                  </div>
+                  <div class="col-md-3 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Phone No</mat-label>
+                          <input matInput name="PhoneNo" type="number" [(ngModel)]="data.PhoneNo"
+                              #PhoneNocontrol>
+                      </mat-form-field>
+                  </div>
+                  <div class="col-md-6 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Address</mat-label>
+                          <input matInput name="Address" [(ngModel)]="data.Address" minlength="2"
+                              required #Addresscontrol>
+                          <mat-error *ngIf="Addresscontrol.required">
+                              Atleast 2 characters is required
+                          </mat-error>
+                      </mat-form-field>
+                  </div>
+                  <div class="col-md-3 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Email</mat-label>
+                          <input matInput name="email" type="email" ngModel [email]="true"
+                              pattern="[a-zA-Z0-9.-_]{3,}@[a-zA-Z.-]{3,}[.]{1}[a-zA-Z]{3,}"
+                              [(ngModel)]="data.Email" #Emailcontrol>
+                          <mat-error>
+                              Invalid EmailId.
+                          </mat-error>
+                      </mat-form-field>
+                  </div>
+                  <div class="col-md-3 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Website</mat-label>
+                          <input matInput name="Website" [(ngModel)]="data.Website"
+                              #Websitecontrol>
+                          <mat-error *ngIf="Websitecontrol.required">
+                              Website is required
+                          </mat-error>
+                      </mat-form-field>
+                  </div>
+                  <div class="col-md-3 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>GST No</mat-label>
+                          <input matInput name="GSTNo" [(ngModel)]="data.GSTNo" #GSTNocontrol>
+                          <mat-error *ngIf="GSTNocontrol.required">
+                              GST No is required
+                          </mat-error>
+                      </mat-form-field>
+                  </div>
+                  <div class="col-md-3 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>CIN No</mat-label>
+                          <input matInput name="CINNo" [(ngModel)]="data.CINNo" #CINNocontrol>
+                          <mat-error *ngIf="CINNocontrol.required">
+                              CIN is required
+                          </mat-error>
+                      </mat-form-field>
+                  </div>
+                  <div class="col-md-3 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Shop Timing</mat-label>
+                          <input matInput name="Timing" [(ngModel)]="data.ShopTiming" required
+                              #TimingNocontrol>
+                          <mat-error *ngIf="TimingNocontrol.required">
+                              Shop Open Timing is required
+                          </mat-error>
+                      </mat-form-field>
+                  </div>
+                  <div class="col-md-3 mb-0">
+                      <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Barcode ShopName</mat-label>
+                          <input matInput name="BarcodeName" min="0" max="15"
+                              [(ngModel)]="data.BarcodeName" #BarcodeNamecontrol>
+                          <mat-error *ngIf="BarcodeNamecontrol.required">
+                              BarcodeName is required
+                          </mat-error>
+                      </mat-form-field>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-2 col-11 ">
+              <div class="row">
+                  <div class="col-12 mt-1 " >
+                      <img class="fit-picture" width="170" height="170" [src]="companyImage">
+                  </div>
+                  <div class="col-xl-10 col-lg-10 col-md-10 col-11 mb-0 " (click)="fileInput.click()" style="cursor: pointer;">
+                      <i class="fa-solid fa-cloud-arrow-up upload_icon" >
+                          <span style="font-size: 10px;letter-spacing: 2px;"> Company Image </span>
+                      </i>
+                      <input  #fileInput id="my-input" name='LogoURL' type="file" [(ngModel)]="data.LogoURL" (change)="uploadImage($event, 'company')" style="display:none;">
+                  </div>
+              </div>
+          </div>
+      </div>
+        <!-- Bill Fromat Options -->
+      <h2 class="header">Bill Format Hide/Show</h2>
+      <div class="row ps-3">
+          <div class="col-md-1 col-sm-6 col-6 p-0">
+              <mat-slide-toggle name="HSNCode" color="primary" [(ngModel)]="data.HSNCode" class="example-margin">HSN</mat-slide-toggle>
+          </div>
+          <div class="col-md-1 col-sm-6 col-6 p-0">
+              <mat-slide-toggle name="CustGSTNo" color="primary" [(ngModel)]="data.CustGSTNo"  class="example-margin">GST</mat-slide-toggle>
+          </div>
+          <div class="col-md-1 col-sm-6 col-6 p-0">
+              <mat-slide-toggle name="Rate" color="primary" [(ngModel)]="data.Rate"  class="example-margin">Rate</mat-slide-toggle>
+          </div>
+          <div class="col-md-1 col-sm-6 col-6 p-0">
+              <mat-slide-toggle name="Discounts" color="primary" [(ngModel)]="data.Discounts" class="example-margin">Dis </mat-slide-toggle>
+          </div>
+          <div class="col-md-1 col-sm-6 col-6 p-0">
+              <mat-slide-toggle name="SubTotal" color="primary" [(ngModel)]="data.SubTotal"  class="example-margin">SubTotal </mat-slide-toggle>
+          </div>
+          <div class="col-md-1 col-sm-6 col-6 p-0">
+              <mat-slide-toggle name="Tax" color="primary" [(ngModel)]="data.Tax" class="example-margin">Tax</mat-slide-toggle>
+          </div>
+          <div class="col-md-1 col-sm-6 col-6 p-0">
+              <mat-slide-toggle name="Total" color="primary" [(ngModel)]="data.Total" class="example-margin">Total</mat-slide-toggle>
+          </div>
+      </div>
+      <!-- Software Bill Options Hide/Show -->
+      <h2 class="header mt-4">Software Bill Hide/Show</h2>
+      <div class="row ps-3">
+          <div class="col-md-1 col-sm-6 col-6 p-0">
+              <mat-slide-toggle name="Discount" color="primary" class="example-margin" [(ngModel)]="data.Discount" class="example-margin">Dis</mat-slide-toggle>
+          </div>
+          <div class="col-md-1 col-sm-6 col-6 p-0">
+              <mat-slide-toggle name="GSTnumber" color="primary" [(ngModel)]="data.GSTnumber" class="example-margin">GST</mat-slide-toggle>
+          </div>
+      </div>
+       <!-- Save/Cancel -->
+      <div class="row my-4">
+          <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-0">
+
+              <button class="me-3" type="button" mat-raised-button color="primary"  [disabled]="id == 0 || !f.valid" *ngIf="suBtn == true"   (click)="updateShop()"  >Update</button>
+              <button type="submit" class="me-3" mat-raised-button color="primary" [disabled]="!f.valid" *ngIf="suBtn == false">Save</button>
+              <button type="button" mat-raised-button (click)="f.reset()">Clear</button>
+          </div>
+      </div>
+  </form>
+  </div>
+</ng-template>
+<!-- model popup ent -->
