--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -349,5 +349,12 @@ height: 93vh !important;
     outline: 0;
 }
 
+
+
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+
+.cdk-global-overlay-wrapper, .cdk-overlay-container {
+    z-index: 99999 !important;
+ }
