--- a/web/src/app/admin/empolyee-list/empolyee-list.component.html
+++ b/web/src/app/admin/empolyee-list/empolyee-list.component.html
@@ -32,7 +32,7 @@
                     </ngb-pagination>
                 </div>
                 <div class="col-2 ms-auto">
-                    <mat-icon class="col-white plus_icon" [routerLink]="['/admin/company',0]"
+                    <mat-icon class="col-white plus_icon" [routerLink]="['/admin/employee',0]"
                         style="float: right;"> add</mat-icon>
                 </div>
             </div>
