--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -72,6 +72,17 @@
 
         <div class="drop-content" id="collapseExample">
           <a href="javascript:void(0)" [routerLink]="['/inventory/supplier',0]" id="collapseExample">Supplier</a>
+          <a href="javascript:void(0)" [routerLink]="['/inventory/fitterList']" id="collapseExample">Fitter</a>
+        </div>
+
+      </div>
+
+      <div *ngIf="user?.data?.UserGroup !== 'SuperAdmin'" class="dropdown">
+        <a class="dropBtn" data-target="#collapseExample">Billing <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+
+        <div class="drop-content" id="collapseExample">
+          <a href="javascript:void(0)" [routerLink]="['/sale/doctorList']" id="collapseExample">Doctor</a>
+         
         </div>
 
       </div>
