--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -220,6 +220,20 @@
                                         (ngModelChange)="data.Remark = onChange($event)">
                                 </mat-form-field>
                             </div>
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label>Commission Type</mat-label>
+                                    <mat-select name="CommissionType" 
+                                        required #CommissionTypecontrol>
+                                        <mat-option [value]=0>No Commission</mat-option>
+                                        <mat-option [value]=1>Per Sale Commission</mat-option>
+                                        <mat-option [value]=2>Per Item Commission</mat-option>
+                                    </mat-select>
+                                    <mat-error>
+                                        Select Commission Type
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
                         </div>
                         <div class="row">
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-3">
