--- a/web/src/app/admin/employee/employee.component.html
+++ b/web/src/app/admin/employee/employee.component.html
@@ -78,41 +78,39 @@
                                         </div>
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
-                                                <mat-label>Commission Type</mat-label>
+                                                <mat-label>Loyalty Type</mat-label>
                                                 <mat-select name="CommissionType" [(ngModel)]="data.CommissionType"
                                                     required #CommissionTypecontrol>
-                                                    <mat-option [value]=0>No Commission</mat-option>
-                                                    <mat-option [value]=1>Per Sale Commission</mat-option>
-                                                    <mat-option [value]=2>Per Item Commission</mat-option>
+                                                    <mat-option [value]=0>No Loyalty</mat-option>
+                                                    <mat-option [value]=1>Per Sale Loyalty</mat-option>
+                                                    <mat-option [value]=2>Per Item Loyalty</mat-option>
                                                 </mat-select>
                                                 <mat-error>
-                                                    Select Commission Type
+                                                    Select Loyalty Type
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
                                         <div *ngIf="data.CommissionType == 1 || data.CommissionType == 2 " class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
-                                                <mat-label>Commission Mode</mat-label>
+                                                <mat-label>Loyalty Mode</mat-label>
                                                 <mat-select name="CommissionMode" [(ngModel)]="data.CommissionMode"
                                                     required #CommissionTypecontrol>
                                                     <mat-option [value]=0>Percentage</mat-option>
-                                                   
-                                                    
                                                 </mat-select>
-                                                <mat-error> Select Commission Type</mat-error>
+                                                <mat-error> Select Loyalty Type</mat-error>
                                             </mat-form-field>
                                         </div>
                                        
                                         <div *ngIf="data.CommissionType == 2 || data.CommissionType == 1" class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
-                                                <mat-label>Commission Value (Brand Wise)</mat-label>
+                                                <mat-label>Loyalty Value (Brand Wise)</mat-label>
                                                 <input matInput type="number" name="CommissionValue"
                                                     [(ngModel)]="data.CommissionValue" #CommissionValuecontrol required>
                                             </mat-form-field>
                                         </div>
                                         <div *ngIf="data.CommissionType == 2 " class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
-                                                <mat-label>Commission Value(Non Brand Wise)</mat-label>
+                                                <mat-label>Loyalty Value(Non Brand Wise)</mat-label>
                                                 <input matInput type="number" name="CommissionValueNB"
                                                     [(ngModel)]="data.CommissionValueNB" #CommissionValueNBcontrol required>
                                             </mat-form-field>
