--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -40,7 +40,7 @@
 
       <!-- CompanyAdmin nav-->
       <a *ngIf="user.data.UserGroup !== 'SuperAdmin'" [routerLink]="['/admin/CompanyDashborad']">Dashborad</a>
-      <div *ngIf="user.data.UserGroup !== 'SuperAdmin'" class="dropdown">
+      <div *ngIf="user?.data?.UserGroup !== 'SuperAdmin'" class="dropdown">
         <a class="dropBtn" data-target="#collapseExample">Administration <i class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
         <div class="drop-content" id="collapseExample">
@@ -50,7 +50,7 @@
           <a href="javascript:void(0)" [routerLink]="['/admin/rolePermission']"                       id="collapseExample">Role-Permission</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/companySetting']"                       id="collapseExample">Company Setting</a>
           <a href="#">SMS Setting</a>
-          <a href="#">Login History</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/companyLoginHistory']"                       id="collapseExample">Login History</a>
           <a href="#">Recycle-Bin</a>
         </div>
 
@@ -88,10 +88,16 @@
       </div>
 
     </div>
-    <a  *ngIf="user?.data?.UserGroup === 'SuperAdmin' " class="logoutBtn" (click)="logout()" title="LogOut">
+   
+    <a  *ngIf="user?.data?.UserGroup == 'SuperAdmin' " class="logoutBtn" (click)="logout()" title="LogOut">
       <i class="fa-solid fa-right-from-bracket"></i>
     </a>
-    <a  *ngIf="user?.data?.UserGroup !== 'SuperAdmin' " class="logoutBtn" (click)="logout()" title="LogOut">
+
+    <a  *ngIf="user?.data?.UserGroup == 'Employee' " class="logoutBtn" (click)="logout()" title="LogOut">
+      <i class="fa-solid fa-right-from-bracket"></i>
+    </a>
+   
+    <a  *ngIf="user?.data?.UserGroup != 'SuperAdmin' " class="logoutBtn" (click)="logout()" title="LogOut">
       <i class="fa-solid fa-right-from-bracket"></i>
     </a>
   </div>
