--- a/web/src/app/inventory/fitter/fitter.component.html
+++ b/web/src/app/inventory/fitter/fitter.component.html
@@ -8,6 +8,7 @@
                         <h2>Fitter Info </h2>
                     </div>
                     <div class="body">
+                        <!-- save fitter start -->
                         <form #f="ngForm" autocomplete="off" (ngSubmit)="onsubmit()">
                             <div class="row">
                                 <div class="col-10">
@@ -127,8 +128,8 @@
                                     <div class="row">
                                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-3">
                                             <button class="me-3" type="button" mat-raised-button color="primary"
-                                            [disabled]="!f.valid" *ngIf="id != 0"
-                                            (click)="updateFitter()">Update</button>
+                                                [disabled]="!f.valid" *ngIf="id != 0"
+                                                (click)="updateFitter()">Update</button>
                                             <button type="submit" class="me-3" mat-raised-button color="primary"
                                                 [disabled]="!f.valid" *ngIf="id == 0">Save</button>
                                             <button type="button" mat-raised-button
@@ -155,6 +156,129 @@
                                 </div>
                             </div>
                         </form>
+                        <!-- save fitter end -->
+                        <div class="row">
+                        <!-- save Lenstype start -->
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <form class="m-0" #assignForm="ngForm" (ngSubmit)="saveRateCard()">
+                                            <div class="row">
+                                                <div class="col-lg-6">
+                                                    <mat-form-field class="example-full-width mb-0">
+                                                        <mat-label>Select Lens Type</mat-label>
+                                                        <mat-select name="LensType" [(ngModel)]="rateCard.LensType"
+                                                            required>
+                                                            <mat-option [value]="l.Name" *ngFor="let l of LensTypeList">
+                                                                {{l.Name}} </mat-option>
+                                                        </mat-select>
+                                                        <mat-error>
+                                                            LensType is required
+                                                        </mat-error>
+                                                    </mat-form-field>
+                                                </div>
+                                                <div class="col-lg-4">
+                                                    <mat-form-field class="example-full-width mb-0">
+                                                        <mat-label>Rate</mat-label>
+                                                        <input matInput type="number" name="MobileNo2"
+                                                            [(ngModel)]="rateCard.Rate" #MobileNo2control>
+                                                        <mat-error>
+                                                            Invalid Amount
+                                                        </mat-error>
+                                                    </mat-form-field>
+                                                </div>
+                                                <div class="col-lg-2">
+                                                    <button type="submit" class="me-3" mat-raised-button color="primary"
+                                                        [disabled]="!assignForm.valid">Save</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="col-lg-12 mt-3"
+                                        style="overflow-y: scroll; height:270px; max-height: 270px; background-color: rgb(255, 255, 255);">
+                                        <table class="table table-striped table-hover table-sm table-bordered"
+                                            style="border: 2px solid #fff !important;">
+                                            <thead class="thead-light">
+                                                <tr>
+                                                    <th>Action</th>
+                                                    <th>S.No</th>
+                                                    <th>Lens Type</th>
+                                                    <th>Rate</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody class="text-center">
+                                                <tr *ngFor="let s of rateCardList; let i = index">
+                                                    <td>
+                                                        <mat-icon class="delete_icon me-1" (click)="deleteRateCard(i)">
+                                                            delete_forever</mat-icon>
+                                                    </td>
+                                                    <td>{{rateCardList.length - i}}</td>
+                                                    <td> {{s.LensType}} </td>
+                                                    <td> {{s.Rate}} </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        <!-- save Lenstype end -->
+
+                        <!-- save assign shop start -->
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <form class="m-0" #assignShopForm="ngForm"
+                                            (ngSubmit)="saveFitterAssignedShop()">
+                                            <div class="row">
+                                                <div class="col-lg-6">
+                                                    <mat-form-field class="example-full-width mb-0">
+                                                        <mat-label>Select Shop</mat-label>
+                                                        <mat-select name="ShopID" [(ngModel)]="assignShop.ShopID"
+                                                            required>
+                                                            <mat-option [value]="s.ID" *ngFor="let s of dropShoplist">
+                                                                {{s.Name}}<span [style.color]="'blue'"
+                                                                    *ngIf="s.AreaName !== 'null'">
+                                                                    ({{s.AreaName}})</span> </mat-option>
+                                                        </mat-select>
+                                                    </mat-form-field>
+                                                </div>
+                                                <div class="col-lg-6">
+                                                    <button class="mr-3" mat-raised-button color="primary"
+                                                        [disabled]="!assignShopForm.valid">Save </button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="col-lg-12 mt-3"
+                                        style="overflow-y: scroll; height:270px; max-height: 270px; background-color: rgb(255, 255, 255);">
+                                        <table class="table table-striped table-hover table-sm table-bordered"
+                                            style="border: 2px solid #fff !important;">
+                                            <thead class="thead-light">
+                                                <tr>
+                                                    <th>Action</th>
+                                                    <th>S.No</th>
+                                                    <th>Shop</th>
+                                                    <th>AreaName</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody class="text-center">
+                                                <tr *ngFor="let s of assignShopList; let i = index">
+                                                    <td>
+                                                        <mat-icon class="delete_icon me-1"
+                                                            (click)="deleteFitterAssignedShop(i)">delete_forever
+                                                        </mat-icon>
+                                                    </td>
+                                                    <td>{{assignShopList.length - i}}</td>
+                                                    <td> {{s.ShopName}} </td>
+                                                    <td> {{s.AreaName}} </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        <!-- save assign shop end -->
+                        </div>
                     </div>
                 </div>
             </div>
