--- a/web/src/app/product/product-manage/product-manage.component.html
+++ b/web/src/app/product/product-manage/product-manage.component.html
@@ -57,7 +57,7 @@
                                     <mat-icon class="col-white plus_icon" (click)="showAdd = !showAdd;">add</mat-icon>
                                     <mat-icon class="delete_icon me-2 ms-2" disabled="selectedProduct === ''"
                                         (click)="deleteProductType()">delete_forever</mat-icon>
-                                    <mat-icon class="edit_icon" (click)="showAdd = !showAdd; updateedit()">edit
+                                    <mat-icon class="edit_icon"  (click)="openModal(content,selectedProduct,selectedHSNCode,selectedGSTPercentage,selectedGSTType)"  (click)="getfieldList()">edit
                                     </mat-icon>
                                 </div>
                             </div>
@@ -219,3 +219,53 @@
         </div>
     </div>
 </section>
+
+<ng-template #content role="document" let-modal>
+    <div class="modal-header" style="height: 50px;">
+      <h2 class="modal-title header pt-2" id="exampleModalLabel">Product Update</h2>
+      <button type="button" title="Close Botton" class="btn-close" aria-hidden="true"
+        (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+        <div class="row" *ngIf="showAdds">
+            <div class="col-xl-4 col-lg-4 col-md-2 col-sm-2 mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Product Type</mat-label>
+                    <input matInput name="NewProduct" [(ngModel)]="newProduct.Name" required
+                        #NewProductTypecontrol>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>HSN Code</mat-label>
+                    <input matInput name="NewHSNCode" [(ngModel)]="newProduct.HSNCode"
+                        #HSNCodecontrol>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>GST Percentage</mat-label>
+                    <input matInput name="NewGSTPercentage" [(ngModel)]="newProduct.GSTPercentage"
+                        #GSTPercentagecontrol>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>GST Type</mat-label>
+                    <mat-select name="NewGSTType" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol>
+                        <mat-option value="None">None</mat-option>
+                        <mat-option value="IGST">IGST</mat-option>
+                        <mat-option value="CGST-IGST">CGST-IGST</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+              
+                <button class="ms-2"  type="button" mat-raised-button  color="primary"
+                    (click)="showAdds = !showAdds; updateProductType()">
+                    update
+                </button>
+            </div>
+        </div>
+    </div>
+</ng-template>
