--- a/web/src/app/inventory/fitter-list/fitter-list.component.html
+++ b/web/src/app/inventory/fitter-list/fitter-list.component.html
@@ -78,8 +78,8 @@
                             <td class="text-left">{{data.Address}}</td>
                             <td class="text-left">{{data.DOB}}</td>
                             <td class="text-left">{{data.Anniversary}}</td>
-                            <td class="text-left">{{data.CreatedByUser}}</td>
-                            <td class="text-left">{{data.UpdatedByUser}}</td>
+                            <td class="text-left"> {{data.CreatedPerson}} </td>
+                            <td class="text-left"> {{data.UpdatedPerson}} </td>
                           </tr>
                         </tbody>
                       </table>
