--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -70,8 +70,8 @@
                                         <td class="text-center">{{(data.Email !== 'null')? data.Email: ''}}</td>
                                         <td class="text-center">{{data.Address}}</td>
                                         <td class="text-center">{{(data.ContactPerson !== 'null')? data.ContactPerson: ''}}</td>
-                                        <td class="text-center">{{data.CreatedByUser}}</td>
-                                        <td class="text-center">{{data.UpdatedByUser}}</td>
+                                        <td class="text-left"> {{data.CreatedPerson}} </td>
+                                        <td class="text-left"> {{data.UpdatedPerson}} </td>
                                     </tr>
                                 </tbody>
                             </table>
