--- a/web/src/app/admin/company-list.component.html
+++ b/web/src/app/admin/company-list.component.html
@@ -61,12 +61,14 @@
                                     <tbody>
                                         <tr class="text-center" *ngFor="let data of dataList  ; let i = index;">
                                             <td style="white-space: nowrap;">
+                                                <mat-icon class="swap_icon ms-1" (click)="companylogin(i)">swap_vert</mat-icon>
+
                                                 <i class="fas fa-info-circle"
                                                     style="color: rgb(23, 23, 194); font-size: 30px; cursor: pointer;box-shadow: 2px 2px 6px #9c9795fa; border-radius: 20px;"
                                                     [routerLink]="['/admin/company',data.ID]" >
                                                 </i>
+
                                                 <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
-                                               
                                                 <!-- <i class="fa fa-trash"
                                                     style="color: rgb(250, 0, 0);
                                                     font-size: 15px;
