--- a/web/src/app/inventory/fitter-list/fitter-list.component.html
+++ b/web/src/app/inventory/fitter-list/fitter-list.component.html
@@ -6,13 +6,10 @@
             <div class="card p-0">
               <div class="header p-2 py-0 pt-1">
                 <div class="row">
-                  <div class="col-md-1 col-12 p-0 ms-3">
-                    <h2>Fitter List
-                      
-                    </h2>
-                      
+                  <div class="col-md-1 col-8 p-0 ms-3">
+                    <h2>Fitter List</h2>
                   </div>
-                  <div class="col-2">
+                  <div class="col-md-2 col-1 ps-md-0 ps-1">
                       <select class=" form-control"
                           style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                           [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -24,21 +21,25 @@
                           <option [ngValue]="500">Show 500 Row</option>
                       </select>
                   </div>
-                  <div class="col-3 mx-auto" style="margin-top:0px;">
+                  <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
                       <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                           ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
                           [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
                           [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                       </ngb-pagination>
                   </div>
-                  <div class="col-2 ms-auto">
+                  <div class="col-md-2 col-4 ms-auto">
+                    <div class="input-group">
+                        <input   placeholder="Search" [(ngModel)]="term" #searching  mdbInput type="search" id="form1" class="form-control" />
+                    </div>
+            </div>
+                  <div class="col-md-1 col-1" style="width: 50px">
                       <mat-icon class="col-white plus_icon" [routerLink]="['/inventory/fitter',0]"
                           style="float: right;"> add</mat-icon>
                   </div>
               </div>
-               
               </div>
-              <div class="body mt-2 p-2">
+              <div class="body mt-md-2 mt-5 p-2">
                 <div class="row">
                   <div class="col-sm-12" style="overflow: auto; height: 530px;">
                     <div class="table-responsive">
@@ -53,11 +54,9 @@
                                     <th class="text-left">MobileNo.2</th>
                                     <th class="text-left">PhoneNo</th>
                                     <th class="text-left">Email</th>
-
                                     <th class="text-left">Address</th>
                                     <th class="text-left">DOB</th>
                                     <th class="text-left">Anniversary</th>
-
                                     <th class="text-left">CreatedBy</th>
                                     <th class="text-left">UpdatedBy</th>
                           </tr>
