--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -4,12 +4,12 @@
         <div class="row clearfix">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                 <div class="card">
-                    <div class="header">
+                    <div class="header p-0 py-0 pt-1">
                         <div class="row">
-                            <div class="col-md-1 col-12 p-0 ms-3">
+                            <div class="col-md-1 col-8 p-0 ms-3">
                                 <h2>Supplier List  </h2>
                             </div>
-                            <div class="col-2 pt-md-1 pt-0">
+                            <div class="col-md-2 col-1 ps-md-0 ps-1">
                                 <select class=" form-control"
                                     style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                     [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -21,14 +21,19 @@
                                     <option [ngValue]="500">Show 500 Row</option>
                                 </select>
                             </div>
-                            <div class="col-3 mx-auto pt-md-1  pt-0" style="margin-top:0px;">
+                            <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
                                 <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                                     ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
                                     [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
                                     [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                                 </ngb-pagination>
                             </div>
-                            <div class="col-2 ms-auto pt-md-1  pt-0">
+                            <div class="col-md-2 col-4 ms-auto">
+                                <div class="input-group">
+                                    <input   placeholder="Search" [(ngModel)]="term" #searching  mdbInput type="search" id="form1" class="form-control" />
+                                </div>
+                        </div>
+                            <div  class="col-md-1 col-1" style="width: 50px">
                                 <mat-icon class="col-white plus_icon"  data-mdb-toggle="modal" 
                                 data-mdb-target="#exampleModal" (click)="openModal(content)"
                                     style="float: right;"> add</mat-icon>
@@ -36,8 +41,8 @@
                         </div>
                     </div>
  <!-- table list start -->         
-                    <div class="row mt-md-2 mt-5  ">
-                        <div style="overflow-x:auto;overflow:auto;height:530px; " class="table-responsive">
+                    <div class="row mt-md-3 mt-5  ">
+                        <div style="overflow-x:auto;overflow:auto;height:530px; " class="table-responsive mt-md-0 mt-3">
                             <table style="width:100%;" id="exportsss"
                                 class="table table-striped table-hover table-sm table-bordered"
                                 style="border: 2px solid #fff !important;">
