--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -121,6 +121,25 @@ $OguruPro-theme: mat.define-light-theme((
 
 }
 
+.swap_icon{
+    background: #38a042e8;
+    color: #fff;
+    padding: 3px;
+    border-radius: 24px;
+    font-size: 23px;
+    height: 30px !important;
+    width: 30px !important;
+    cursor: pointer;
+    transition: .5s;
+    box-shadow: 2px 2px 6px #9c9795fa;
+}
+.swap_icon:hover{
+   
+    color: #38a042e8 !important;
+    background: #ffffff;
+    font-size: 23px;
+
+}
 .edit_icon{
     background: #393497e8;
     color: #fff;
@@ -162,6 +181,14 @@ $OguruPro-theme: mat.define-light-theme((
     background: #ffffff;
     font-size: 23px;
 
+}
+
+.SelectYourShop{
+    float: right; 
+    color: aliceblue; 
+    margin-left: 50% !important;
+    cursor: pointer;
+    transition: 0.5s;
 }
 
 .logoutBtn{
@@ -250,6 +277,7 @@ $OguruPro-theme: mat.define-light-theme((
     background-image: url(assets/images/SHOP.svg);
 
     background-size: 100%;
+   
 }
 
 .card_TBL{
