--- a/web/src/app/admin/login-history/login-history.component.html
+++ b/web/src/app/admin/login-history/login-history.component.html
@@ -6,10 +6,10 @@
                     <div class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
-                                <div class="col-md-2 col-12 p-0 ms-3">
+                                <div class="col-md-2 col-8 p-0 ms-3">
                                     <h2>Company Login List</h2>
                                 </div>
-                                <div class="col-2">
+                                <div class="col-md-2 col-1 ps-md-0 ps-1">
                                     <select class=" form-control"
                                         style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                         [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -21,15 +21,19 @@
                                         <option [ngValue]="500">Show 500 Row</option>
                                     </select>
                                 </div>
-                                <div class="col-3 mx-auto" style="margin-top:0px;">
+                                <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
                                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                                         ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
                                         [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
                                         [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                                     </ngb-pagination>
                                 </div>
-                                <div class="col-2 ms-auto">
+                                <div class="col-md-2 col-4 ms-auto">
+                                    <div class="input-group">
+                                        <input   placeholder="Search" [(ngModel)]="term" #searching  mdbInput type="search" id="form1" class="form-control" />
+                                    </div>
                                 </div>
+                                
                             </div>
                         </div>
                         <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
