--- a/web/src/app/admin/user-update-password/user-update-password.component.html
+++ b/web/src/app/admin/user-update-password/user-update-password.component.html
@@ -67,7 +67,7 @@
                                             <td class="text-left">{{data.MobileNo1 }}</td>
                                             <td class="text-left">{{data.MobileNo2}}</td>
                                             <td class="text-left">{{data.Email }}</td>
-                                            <td class="text-left">{{data.Address }}</td>
+                                            <td class="text-left w-25" >{{data.Address }}</td>
                                             <td class="text-left">{{data.Branch}}</td>
                                             <td class="text-left">{{data.UserGroup}}</td>
                                         </tr>
